# my_opengl_dev

./: CMakeLists.txt  README.md  main.cpp
src/: glad.c
